<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/draw_nav_dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard"/>

        <item
            android:id="@+id/draw_nav_account"
            android:icon="@drawable/account_icon"
            android:title="@string/my_account"/>

        <item
            android:id="@+id/draw_nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/_settings"/>

    </group>

    <item
        android:id="@+id/draw_nav_feedback"
        android:icon="@drawable/feedback_icon"
        android:title="@string/feedback"/>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/draw_nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="Logout"/>
        </menu>

    </item>


</menu>