<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".show_card1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/bar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Details"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:fontFamily="@font/tomysoft_medium"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/classic_catfood"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classic"
        android:textSize="20sp"
        android:textColor="#353535"
        android:fontFamily="@font/tomysoft_medium"
        android:layout_margin="20dp"
        android:textStyle="normal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_9_45dollars"
            android:textSize="30sp"
            android:fontFamily="@font/tomysoft_medium"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="#3B0AAC"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/rating"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>







    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textSize="18sp"
        android:fontFamily="@font/tomysoft_medium"
        android:textColor="#5A5A5A"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:fontFamily="@font/tomysoft_medium"
        android:textColor="#8E8E8E"
        android:layout_margin="20dp"
        android:textStyle="normal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Check Out Now"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/tomysoft_medium"
        android:backgroundTint="@color/mercato_logo_background"/>

</LinearLayout>